add getGroupNames remove getGroupsClaimNames